Fix z-index of overlay

--- a/css/content.css
+++ b/css/content.css
@@ -10,7 +10,7 @@
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 10000;
+    z-index: 2147483647;
     top: 0px;
     left: 0px;
     background-color: rgb(0,0,0);
@@ -33,7 +33,7 @@
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 10000;
+    z-index: 2147483647;
     top: 0px;
     left: 0px;
 }
@@ -75,7 +75,7 @@
 
 #gc-capframe-border {
     position: fixed;
-    z-index: 10000;
+    z-index: 2147483647;
     top: 0px;
     bottom: 0px;
     left: 0px;
@@ -158,7 +158,7 @@
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 9999;
+    z-index: 2147483646;
     top: 0px;
     left: 0px;
     font-size: 20px;
